# heartbeat-central

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CLAUDE.md  Dockerfile  README.md  alert_manager.py  app.py  application_service.py  config.py  database.py  docker-compose.yml  healthcheck_engine.py  heartbeat_monitor.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  routes.py  scheduler.py
.claude/: settings.local.json
.claude/commands/: db-status.md  lint.md  list-specs.md  new-spec.md  serve.md  ship.md  test.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
alert_plugins/: __init__.py  base.py  discord_plugin.py  email_plugin.py  slack_plugin.py  sms_plugin.py
scripts/: lint.sh  test.sh
specifications/: README.md  TEMPLATE.md  active-inactive-toggle.md  alert-plugin-compatibility-testing.md  api-documentation.md  dashboard-templates-update.md  data-migration-backward-compatibility.md  error-handling-edge-cases.md  heartbeat-refactor.md  monitoring-observability.md  performance-scalability.md  production-deployment-concerns.md  security-considerations.md  testing-coverage.md
specifications/archive/: active-inactive-toggle.md  heartbeat-refactor.md
templates/: base.html  dashboard.html
tests/: test_basic.py
